--- a/client/pages/cart/cart.html
+++ b/client/pages/cart/cart.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -7,7 +6,37 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f5f5f5
+      background-color: #f5f5f5;
+    }
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #e5e7eb;
+      padding: 10px;
+      background-color: #ffffff;
+      border-radius: 8px;
+    }
+    .cart-item img {
+      width: 60px;
+      height: 60px;
+      object-fit: cover;
+    }
+    .cart-item-controls {
+      display: flex;
+      align-items: center;
+      gap: 8px; /* Aumenta el espacio entre los controles */
+    }
+    .cart-item-controls button {
+      border: none;
+      background: none;
+      cursor: pointer;
+      font-size: 20px;
+      color: #6b7280; /* Color gris */
+    }
+    .cart-item-controls .quantity {
+      font-size: 16px;
+      font-weight: 600;
     }
   </style>
 </head>
@@ -46,18 +75,18 @@
   </nav>
   <main class="pt-20 px-4">
     <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">Mi Carrito</h1>
+    <div id="cartItems" class="space-y-4"></div>
+    <div id="cartTotals" class="mt-8 p-4 bg-white rounded-lg shadow-md">
+      <div class="flex justify-between items-center font-bold">
+        <span>Total de Productos:</span>
+        <span id="totalQuantity" class="font-normal">0</span>
+      </div>
+      <div class="flex justify-between items-center font-bold mt-2">
+        <span>Total a Pagar:</span>
+        <span id="totalAmount" class="font-normal">$0</span>
+      </div>
+    </div>
   </main>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const btnNavbar = document.getElementById('btnNavbar')
-      const menuNavbar = document.getElementById('menuNavbar')
-      btnNavbar.addEventListener('click', function () {
-        const expanded = btnNavbar.getAttribute('aria-expanded') === 'true'
-        btnNavbar.setAttribute('aria-expanded', !expanded)
-        menuNavbar.classList.toggle('hidden')
-      })
-    })
-  </script>
+  <script src="cart.controller.js"></script>
 </body>
 </html>
