carrito andando y cargando

--- a/client/pages/cart/cart.html
+++ b/client/pages/cart/cart.html
@@ -25,14 +25,14 @@
     .cart-item-controls {
       display: flex;
       align-items: center;
-      gap: 8px; /* Aumenta el espacio entre los controles */
+      gap: 8px; 
     }
     .cart-item-controls button {
       border: none;
       background: none;
       cursor: pointer;
       font-size: 20px;
-      color: #6b7280; /* Color gris */
+      color: #6b7280; 
     }
     .cart-item-controls .quantity {
       font-size: 16px;
